--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-aiohttp==3.5.4
 async-timeout==3.0.1
+asyncpg==0.18.3
 attrs==19.1.0
 chardet==3.0.4
 idna==2.8
 idna-ssl==1.1.0
 multidict==4.5.2
-pgpubsub==0.0.5
 pkg-resources==0.0.0
 psycopg2==2.8.3
 typing-extensions==3.7.4
